--- a/index.html
+++ b/index.html
@@ -1,11 +1,308 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tro's Moto</title>
+    <!-- DaisyUI-CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+    <style>
+        .poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+    </style>
+
 </head>
-<body>
+
+<body class="poppins-regular bg-white">
+
+   <!-- Navbar -->
+  <div class="navbar bg-white-100 px-8 py-4 shadow-md">
+    <div class="flex-1">
+      <a class="text-2xl font-bold text-black">Tro's Moto</a>
+    </div>
+    <div class="flex-none">
+      <ul class="menu menu-horizontal px-1 gap-4 text-black font-medium hidden md:flex">
+        <li><a>Home</a></li>
+        <li><a>Shop</a></li>
+        <li><a>News</a></li>
+        <li><a>Contact</a></li>
+      </ul>
+      <button class="btn ml-4 bg-[#F87171] text-white border-none">Login</button>
+
+    </div>
+  </div>
+
+  <!-- Hero Section with Carousel -->
+  <div class="bg-[#FFF3F1] py-12 px-4">
+    <div class="max-w-6xl mx-auto grid md:grid-cols-2 items-center gap-10">
+      <!-- Text Section -->
+      <div>
+        <h1 class="text-4xl md:text-5xl font-bold text-black leading-tight">Ride-on R15 V4<br />with Smile</h1>
+        <p class="text-gray-600 mt-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+        <button class="btn mt-6 bg-[#F87171] text-white border-none">Purchase</button>
+      </div>
+
+      <!-- Carousel Section -->
+      <div class="carousel w-full rounded-lg">
+        <!-- Slide 1 -->
+        <div id="slide1" class="carousel-item relative w-full justify-center">
+          <img src="biker-zone-resources/images/slider/bike1.png" class="w-full max-w-md" alt="Bike 1" />
+          <a href="#slide3" class="btn btn-circle absolute left-0 top-1/2 -translate-y-1/2 bg-white">&#8592;</a>
+          <a href="#slide2" class="btn btn-circle absolute right-0 top-1/2 -translate-y-1/2 bg-white">&#8594;</a>
+        </div>
+        <!-- Slide 2 -->
+        <div id="slide2" class="carousel-item relative w-full justify-center">
+          <img src="biker-zone-resources/images/slider/bike2.png" class="w-full max-w-md" alt="Bike 2" />
+          <a href="#slide1" class="btn btn-circle absolute left-0 top-1/2 -translate-y-1/2 bg-white">&#8592;</a>
+          <a href="#slide3" class="btn btn-circle absolute right-0 top-1/2 -translate-y-1/2 bg-white">&#8594;</a>
+        </div>
+        <!-- Slide 3 -->
+        <div id="slide3" class="carousel-item relative w-full justify-center">
+          <img src="biker-zone-resources/images/slider/bike3.png" class="w-full max-w-md" alt="Bike 3" />
+          <a href="#slide2" class="btn btn-circle absolute left-0 top-1/2 -translate-y-1/2 bg-white">&#8592;</a>
+          <a href="#slide1" class="btn btn-circle absolute right-0 top-1/2 -translate-y-1/2 bg-white">&#8594;</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Featured Bikes Section -->
+<section class="py-16 px-4 text-center">
+  <h2 class="text-3xl md:text-4xl font-bold mb-2 text-black">Featured Bikes In This Year</h2>
+  <p class="text-sm text-red-500 mb-10 font-semibold">Best bike collection</p>
+  
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 max-w-6xl mx-auto">
+    <img src="biker-zone-resources/images/others/feature-bike.png" alt="Bike 1" class="w-full max-w-xs mx-auto" />
+    <img src="biker-zone-resources/images/others/extrabike.png" alt="Bike 2" class="w-full max-w-xs mx-auto" />
+    <img src="biker-zone-resources/images/others/feature-bike.png" alt="Bike 3" class="w-full max-w-xs mx-auto" />
+  </div>
+</section>
+
+<!-- Latest News Section -->
+<section class="py-16 px-4 bg-gray-50">
+  <div class="max-w-6xl mx-auto">
+    <h2 class="text-3xl md:text-4xl font-bold text-center text-black mb-12">Latest News</h2>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
+      <!-- Card 1 -->
+      <div class="bg-white rounded-lg shadow-md p-4 hover:shadow-xl transition-shadow">
+        <img src="biker-zone-resources/images/others/latest1.png" alt="News 1" class="rounded-md mb-4 w-full h-48 object-cover" />
+        <h3 class="text-lg font-bold mb-2">Ducati XDIAVEL S-73</h3>
+        <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+        <button class="btn bg-[#F87171] text-white border-none hover:bg-black hover:text-white">Read More</button>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="bg-white rounded-lg shadow-md p-4 hover:shadow-xl transition-shadow">
+        <img src="biker-zone-resources/images/others/latest2.png" alt="News 2" class="rounded-md mb-4 w-full h-48 object-cover" />
+        <h3 class="text-lg font-bold mb-2">Motorcycles & Scooters</h3>
+        <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+        <button class="btn bg-[#F87171] text-white border-none hover:bg-black hover:text-white">Read More</button>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="bg-white rounded-lg shadow-md p-4 hover:shadow-xl transition-shadow">
+        <img src="biker-zone-resources/images/others/latest3.png" alt="News 3" class="rounded-md mb-4 w-full h-48 object-cover" />
+        <h3 class="text-lg font-bold mb-2">2021 Honda CBR500R</h3>
+        <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+        <button class="btn bg-[#F87171] text-white border-none hover:bg-black hover:text-white">Read More</button>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Happy Clients -->
+<section class="py-16 bg-white text-center">
+  <h2 class="text-3xl font-bold mb-10 text-black">
+    Happy <span class="text-orange-500">Clients</span> says
+  </h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-6xl mx-auto px-4">
+    <!-- Card 1 -->
+    <div class="card shadow-md border p-6">
+      <img src="https://randomuser.me/api/portraits/men/32.jpg" class="w-20 h-20 mx-auto rounded-full mb-4" />
+      <p class="text-sm mb-2">Slate helps you see how many more days you need to work to reach your financial goal.</p>
+      <div class="rating justify-center my-2">
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+      </div>
+      <p class="text-sm font-semibold text-blue-600">Regina Miles</p>
+      <p class="text-xs text-gray-500">Banker</p>
+    </div>
+     <!-- Card 1 -->
+     <div class="card shadow-md border p-6">
+      <img src="biker-zone-resources/images/others/user-1.png" class="w-20 h-20 mx-auto rounded-full mb-4" />
+      <p class="text-sm mb-2">Slate helps you see how many more days you need to work to reach your financial goal.</p>
+      <div class="rating justify-center my-2">
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+      </div>
+      <p class="text-sm font-semibold text-blue-600">Nimgi Chan</p>
+      <p class="text-xs text-gray-500">Teacher</p>
+    </div>
+     <!-- Card 1 -->
+     <div class="card shadow-md border p-6">
+      <img src="biker-zone-resources/images/others/user-2.png" class="w-20 h-20 mx-auto rounded-full mb-4" />
+      <p class="text-sm mb-2">Slate helps you see how many more days you need to work to reach your financial goal.</p>
+      <div class="rating justify-center my-2">
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+      </div>
+      <p class="text-sm font-semibold text-blue-600">Kakma Gaa</p>
+      <p class="text-xs text-gray-500">Human Being</p>
+    </div>
+     <!-- Card 1 -->
+     <div class="card shadow-md border p-6">
+      <img src="biker-zone-resources/images/others/user-3.png" class="w-20 h-20 mx-auto rounded-full mb-4" />
+      <p class="text-sm mb-2">Slate helps you see how many more days you need to work to reach your financial goal.</p>
+      <div class="rating justify-center my-2">
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+      </div>
+      <p class="text-sm font-semibold text-blue-600">Simona Paul</p>
+      <p class="text-xs text-gray-500">Activist</p>
+    </div>
     
+  </div>
+</section>
+
+<!-- FAQ Section -->
+<section class="py-16 bg-white text-center">
+  <h2 class="text-3xl md:text-4xl font-bold mb-10 text-black">
+    Frequently Asked <span class="text-orange-500">Questions</span>
+  </h2>
+  <div class="max-w-6xl mx-auto flex flex-col lg:flex-row items-center gap-10 px-4">
+    <!-- Illustration -->
+    <img src="biker-zone-resources/images/others/faq.png" class="w-48 lg:w-60" alt="FAQ Illustration" />
+
+    <!-- Accordion FAQ -->
+    <div class="flex-1 w-full space-y-4 text-left">
+      <!-- Question 1 -->
+      <div class="collapse collapse-arrow bg-white border border-gray-200 rounded-box">
+        <input type="checkbox" />
+        <div class="collapse-title text-lg font-semibold">
+          What are the most important things I should know about riding a bike?
+        </div>
+        <div class="collapse-content text-sm text-gray-600">
+          Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.
+        </div>
+      </div>
+
+      <!-- Question 2 -->
+      <div class="collapse collapse-arrow bg-white border border-gray-200 rounded-box">
+        <input type="checkbox" />
+        <div class="collapse-title text-lg font-semibold">
+          How can I tell if my helmet is old and I need a new one?
+        </div>
+        <div class="collapse-content text-sm text-gray-600">
+          Replace your helmet every 5 years or immediately after a crash—even if it looks fine. Inspect for cracks, fraying straps, or loose padding.
+        </div>
+      </div>
+
+      <!-- Question 3 -->
+      <div class="collapse collapse-arrow bg-white border border-gray-200 rounded-box">
+        <input type="checkbox" />
+        <div class="collapse-title text-lg font-semibold">
+          My bike has been in storage—is it safe to ride?
+        </div>
+        <div class="collapse-content text-sm text-gray-600">
+          Before riding, check tire pressure, brakes, chain lubrication, and ensure there’s no rust or damage to key parts.
+        </div>
+      </div>
+
+      <!-- Question 4 -->
+      <div class="collapse collapse-arrow bg-white border border-gray-200 rounded-box">
+        <input type="checkbox" />
+        <div class="collapse-title text-lg font-semibold">
+          What rules should I follow when riding my bike?
+        </div>
+        <div class="collapse-content text-sm text-gray-600">
+          Follow all local traffic laws, wear a helmet, use hand signals, stay visible, and be courteous to others on the road.
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-gray-900 text-white py-10 mt-16">
+  <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 md:grid-cols-4 gap-8">
+    <!-- Section 1: Brand -->
+    <div>
+      <h2 class="text-2xl font-bold mb-2 text-orange-500">BikeZone</h2>
+      <p class="text-sm text-gray-400">Your trusted partner in all things cycling. Ride safe, ride smart.</p>
+    </div>
+
+    <!-- Section 2: Company -->
+    <div>
+      <h3 class="text-lg font-semibold mb-2">Company</h3>
+      <ul class="space-y-1 text-gray-400 text-sm">
+        <li><a href="#" class="hover:text-orange-500">About us</a></li>
+        <li><a href="#" class="hover:text-orange-500">Contact</a></li>
+        <li><a href="#" class="hover:text-orange-500">Jobs</a></li>
+        <li><a href="#" class="hover:text-orange-500">Press kit</a></li>
+      </ul>
+    </div>
+
+    <!-- Section 3: Legal -->
+    <div>
+      <h3 class="text-lg font-semibold mb-2">Legal</h3>
+      <ul class="space-y-1 text-gray-400 text-sm">
+        <li><a href="#" class="hover:text-orange-500">Terms of use</a></li>
+        <li><a href="#" class="hover:text-orange-500">Privacy policy</a></li>
+        <li><a href="#" class="hover:text-orange-500">Cookie policy</a></li>
+      </ul>
+    </div>
+
+    <!-- Section 4: Social -->
+    <div>
+      <h3 class="text-lg font-semibold mb-2">Follow Us</h3>
+      <div class="flex space-x-4 mt-2">
+        <a href="#" class="text-gray-400 hover:text-orange-500">
+          <i class="fab fa-facebook fa-lg"></i>
+        </a>
+        <a href="#" class="text-gray-400 hover:text-orange-500">
+          <i class="fab fa-twitter fa-lg"></i>
+        </a>
+        <a href="#" class="text-gray-400 hover:text-orange-500">
+          <i class="fab fa-instagram fa-lg"></i>
+        </a>
+        <a href="#" class="text-gray-400 hover:text-orange-500">
+          <i class="fab fa-youtube fa-lg"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bottom Bar -->
+  <div class="mt-10 border-t border-gray-800 pt-4 text-center text-sm text-gray-500">
+    © 2025 BikeZone. All rights reserved.
+  </div>
+</footer>
+
+
 </body>
 </html>
